# pocket-syllabus

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  eslint.config.js  package-lock.json  package.json
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  sqlx.toml  tauri.conf.json
src-tauri/db/: 000_init.sql  schema.sql
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  scrape.rs
src-tauri/src/scrape/: list.rs  sub.rs
src/components/: Content.vue  Title.vue
src/components/common/: CheckBox.vue  ComboBox.vue  ComboBoxMenu.vue  SearchBox.vue  SimpleButton.vue
src/components/list/: CourseDetail.vue  ListHeaderItem.vue  ListItem.vue  ListTable.vue
src/components/search/: CheckBoxes.vue  FetchButton.vue  Search.vue  SearchBoxes.vue  SearchConditions.vue  SearchField.vue  Timetable.vue
src/scripts/: consts.ts  course.ts
src/styles/: style.css
