[package]
name = "pocket-syllabus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pocket_syllabus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
scraper = "0.22.0"
regex = "1.11.1"
sqlx = { version = "0.8.3", features = ["migrate", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["blocking"] }
tauri-plugin-cli = "2.2.0"
